--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ commands:
 
       - run:
           name: Check Bundle cache
-          command: ls ~/vendor/bundle
+          command: ls ~/project/vendor/bundle
 
       - run:
           name: Bundle install
