--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,6 +219,7 @@ jobs:
             export RAILS_ENV=test
             bundle exec rake "knapsack_pro:queue:rspec[--format documentation --no-color --format RspecJunitFormatter --out tmp/rspec.xml]"
           environment:
+            WD_EDGE_CHROME_PATH: /usr/bin/microsoft-edge
             KNAPSACK_PRO_RSPEC_SPLIT_BY_TEST_EXAMPLES: true
             CASEFLOW_WEBDRIVER: edge
             # Uncomment to profile test performance in CircleCI
