--- a/.reek.yml
+++ b/.reek.yml
@@ -23,6 +23,8 @@ detectors:
       - Hearings::GeomatchAndCacheAppealJob#perform
       - HearingRepository#slot_new_hearing
       - LegacyDocket#distribute_appeals
+      - SanitizedJsonExporter
+      - SanitizedJsonImporter
       - Seeds::Tasks#create_legacy_case_with_open_schedule_hearing_task
       - SlackService#pick_color
       - Task#actions_allowable?
