--- a/.reek.yml
+++ b/.reek.yml
@@ -23,6 +23,7 @@ detectors:
       - Hearings::GeomatchAndCacheAppealJob#perform
       - HearingRepository#slot_new_hearing
       - LegacyDocket#distribute_appeals
+      - SanitizedJsonDifference
       - Seeds::Tasks#create_legacy_case_with_open_schedule_hearing_task
       - SlackService#pick_color
       - Task#actions_allowable?
@@ -50,6 +51,7 @@ detectors:
     exclude:
       - HearingSerializerBase
       - LegacyDocket
+      - SanitizedJsonImporter
       - Seeds::Tasks
       - TaskTreeRenderModule
   DuplicateMethodCall:
