works but needs major cleanup

--- a/.reek.yml
+++ b/.reek.yml
@@ -54,6 +54,7 @@ detectors:
       - HearingSerializerBase
       - LegacyDocket
       - SanitizedJsonImporter
+      - SanitizedJsonExporter
       - Seeds::Tasks
       - TaskTreeRenderModule
   DuplicateMethodCall:
