Tools to replicate sanitized real cases in dev/test environment (#15976)
Innovation Idea: Create a tool to replicate sanitized real cases in dev/test environment

Slack channel: #appeals-ip-replicate-data

Details: Many engineers desire a way to test solutions on real data without affecting prod data. The approach is to create a tool that can export an appeal and associated records, sanitize them of PII, then import them into a dev/test environment.

Hypothesis: If realistic appeals can be replicated in our dev/test environment, then we can test solutions locally and be more confident in the outcome of the solution. This can also be a building block to import more realistic cases into the default dev environment.

User Story: As a developer, I want to recreate sanitized instances of prod data in my dev (or testing) environment so that I can experiment with realistic data.
- The data can be imported to be part of our seed data in the dev DB.
- The data can be imported into the test DB for individual Rspec tests.

### Description
Tools to replicate sanitized real cases in dev/test environment

### Acceptance Criteria
- [ ] Code compiles correctly
- [ ] Able to export and import AMA appeals with tasks, issues, hearings, and associated users and orgs

### Testing Plan

1. Copy files to prod (or ask Yoom to do it)
```bash
INSTANCE=i-06b8441957026bb62
scp lib/helpers/sanit*.rb  lib/helpers/association_wrapper.rb $INSTANCE:/tmp
```

2. ssm into the instance and move the new files to the Caseflow folder and start a Rails console in prod
```bash
sudo bash
cd /opt/caseflow-certification/src
mv -vf /tmp/sanit*.rb /tmp/association_wrapper.rb lib/helpers/

source /opt/caseflow-certification/caseflow-certification_env.sh
IRBRC=/tmp/my_repl.rb bin/rails c
```

3. In the Rails console, do the following
```ruby
require "faker"
require "helpers/sanitized_json_configuration.rb"
require "helpers/sanitized_json_exporter.rb"

# Choose a random a

--- a/.reek.yml
+++ b/.reek.yml
@@ -16,6 +16,7 @@ detectors:
       - LegacyDocket#distribute_appeals
       - Veteran
       - ControllerSchema#respond_to_missing?
+      - SanitizedJsonDifference
   ControlParameter:
     exclude:
       - ExternalApi::VBMSService#self.send_and_log_request
@@ -23,6 +24,8 @@ detectors:
       - Hearings::GeomatchAndCacheAppealJob#perform
       - HearingRepository#slot_new_hearing
       - LegacyDocket#distribute_appeals
+      - SanitizedJsonDifference
+      - SanitizedJsonConfiguration
       - Seeds::Tasks#create_legacy_case_with_open_schedule_hearing_task
       - SlackService#pick_color
       - Task#actions_allowable?
@@ -50,6 +53,9 @@ detectors:
     exclude:
       - HearingSerializerBase
       - LegacyDocket
+      - SanitizedJsonConfiguration
+      - SanitizedJsonImporter
+      - SanitizedJsonExporter
       - Seeds::Tasks
       - TaskTreeRenderModule
   DuplicateMethodCall:
@@ -101,6 +107,7 @@ detectors:
       - RequestIssue#special_issues
       - RequestIssueReporter#as_csv
       - RunAsyncable#perform_later_or_now
+      - SanitizedJsonConfiguration
       - ScheduleHearingTask#create_hearing
       - Seeds::Hearings
       - Seeds::Tasks#create_colocated_legacy_tasks
@@ -136,6 +143,7 @@ detectors:
       - LegacyDocket#new_distributed_case
       - Api::V3::DecisionReviews::ContestableIssueFinder#initialize
       - QueueRepository#assign_case_to_attorney!
+      - SanitizedJsonDifference
       - Seeds::MTV#judge_addresses_mtv
       - Seeds::MTV#send_mtv_to_judge
       - Seeds::Tasks#create_task_at_colocated
@@ -181,6 +189,7 @@ detectors:
       - DuplicateUserTask
       - LegacyAppealDispatch
       - Address
+      - SanitizedJsonImporter
       - ExternalApi::PexipService
       - InvalidAssigneeStatusOnTaskCreate
       - Api::V3::DecisionReviews::ContestableIssueFinder
@@ -220,6 +229,7 @@ detectors:
       - Reporter#median
       - Reporter#seconds_to_hms
       - Reporter#percent
+      - SanitizedJsonConfiguration
       - ScheduleHearingTaskPager#sorted_tasks
       - VBMSCaseflowLogger#log
 
