--- a/client/package.json
+++ b/client/package.json
@@ -135,6 +135,7 @@
     "uswds": "^1.6.4",
     "uuid": "^3.0.1",
     "vis-network": "^9.0.4",
+    "vis-timeline": "^7.4.6",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "yup": "^0.32.9"
