--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -48,6 +48,8 @@ plugins:
         ruby:
         javascript:
           mass_threshold: 50
+    exclude_patterns:
+    - 'client/app/queue/cavc/utils.js'
   eslint:
     enabled: true
   fixme:
