--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -35,6 +35,8 @@ checks:
   identical-code:
     config:
       threshold: # language-specific defaults. an override will affect all languages.
+    exclude_patterns:
+    - 'client/app/queue/cavc/utils.js'
 
 plugins:
   brakeman:
