--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -50,6 +50,8 @@ plugins:
         ruby:
         javascript:
           mass_threshold: 50
+    exclude_patterns:
+    - 'db/migrate/*'
   eslint:
     enabled: true
   fixme:
