--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -51,6 +51,7 @@ plugins:
         javascript:
           mass_threshold: 50
     exclude_patterns:
+    - 'spec/feature/queue/case_details_spec.rb'
     - 'db/migrate/*'
   eslint:
     enabled: true
